--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+arrow==1.4.0
 Flask==3.1.2
-numpy==2.3.3
-python-socketio==5.14.1
+numpy==2.3.4
+python-socketio==5.14.2
+scipy==1.16.2
 torch==2.8.0
